--- a/src/components/users/student/sections/studentgrade/studentGrade.css
+++ b/src/components/users/student/sections/studentgrade/studentGrade.css
@@ -111,7 +111,7 @@
 .dropdown-menu-quarter {
   position: absolute;
   top: 170%;
-  left: -20px;
+  left: -15px;
   right: 0;
   background: var(--md-sys-color-surface-container);
   border-radius: var(--radius-xl);
